Vuetify Landing Page Template

--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,81 @@
 <!DOCTYPE html>
 <html lang="">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
-  </head>
-  <body>
-    <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <!--    <link rel="icon" href="<%= BASE_URL %>favicon.ico">-->
+
+  <meta name="description" content="Ziliring | Trusted Investment Platform" />
+  <meta name="keywords" content="investment, ziliring, ring, affliate" />
+  <meta name="author" content="ziliring"/>
+
+  <!-- Site Title -->
+  <title> Ziliring</title>
+  <!-- Site favicon -->
+  <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+  <link rel="manifest" href="favicon/site.webmanifest">
+  <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#f87070">
+
+  <meta property="og:title" content="Ziliring | Creating Financial Solution for all">
+  <meta property="og:description" content="Ziliring offers the financial solution we all have been waiting for. Subscribe to our plans today to join the greatest financial breakthrough">
+  <meta property="og:image" content="https://ziliring.com/favicon/android-chrome-192x192.png">
+  <meta property="og:url" content="https://ziliring.com">
+  <meta name="twitter:card" content="summary_large_image">
+
+  <!-- Bootstrap core CSS -->
+  <link rel="stylesheet" href="assets/css/bootstrap.min.css" type="text/css">
+
+  <!--Material Icon -->
+  <link rel="stylesheet" type="text/css" href="assets/css/materialdesignicons.min.css" />
+
+  <!-- owl.carousel -->
+  <link rel="stylesheet" type="text/css" href="assets/css/owl.carousel.css"/>
+  <link rel="stylesheet" type="text/css" href="assets/css/owl.theme.css"/>
+  <link rel="stylesheet" type="text/css" href="assets/css/owl.transitions.css"/>
+
+  <!-- Pe7 Icon -->
+  <link rel="stylesheet" type="text/css" href="assets/css/pe-icon-7.css">
+
+  <!-- Magnific-popup -->
+  <link rel="stylesheet" type="text/css" href="assets/css/magnific-popup.css">
+
+  <!-- Custom  Css -->
+  <!--    <link rel="stylesheet" type="text/css" href="assets/css/style.css"/>-->
+</head>
+<body>
+<noscript>
+  <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+</noscript>
+
+
+<div id="app"></div>
+<!-- built files will be auto injected -->
+
+
+
+
+<!-- javascript -->
+<script src="assets/js/jquery.min.js"></script>
+<script src="assets/js/bootstrap.bundle.min.js"></script>
+<!-- jQuery Countdown plugin -->
+<script src="assets/js/jquery.countdown.min.js"></script>
+<script src="assets/js/jquery.easing.min.js"></script>
+<!-- owl.carousel.min -->
+<script src="assets/js/owl.carousel.min.js"></script>
+<script src="assets/js/scrollspy.min.js"></script>
+<!-- magnific Popup -->
+<script src="assets/js/jquery.magnific-popup.min.js"></script>
+<!-- partical js-->
+<script src="assets/js/particles.js"></script>
+<!--    <script src="assets/js/particles.app.js"></script>-->
+<!--    &lt;!&ndash; contact &ndash;&gt;-->
+<!--    <script src="assets/js/contact.init.js"></script>-->
+<!--    &lt;!&ndash; jquery.app js&ndash;&gt;-->
+<!--    <script src="assets/js/jquery.app.js"></script>-->
+</body>
 </html>
