add firebase function watchers and integrate phone verification on register

--- a/public/index.html
+++ b/public/index.html
@@ -77,5 +77,6 @@
 <script src="assets/js/jquery.magnific-popup.min.js"></script>
 <!-- partical js-->
 <script src="assets/js/particles.js"></script>
+<script src="assets/js/aes.js"></script>
 </body>
 </html>
