--- a/public/index.html
+++ b/public/index.html
@@ -51,6 +51,7 @@
   <link href="assets/dashboard/vendor/bootstrap-select/dist/css/bootstrap-select.min.css" rel="stylesheet">
   <link href="https://cdn.lineicons.com/2.0/LineIcons.css" rel="stylesheet">
   <link href="assets/dashboard/vendor/owl-carousel/owl.carousel.css" rel="stylesheet">
+  <link rel="stylesheet" href="assets/dashboard/css/style.css">
 </head>
 <body>
 <noscript>
