--- a/public/index.html
+++ b/public/index.html
@@ -19,9 +19,9 @@
   <link rel="manifest" href="favicon/site.webmanifest">
   <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#5bbad5">
   <meta name="msapplication-TileColor" content="#da532c">
-  <meta name="theme-color" content="#f87070">
+  <meta name="theme-color" content="#6418C3">
 
-  <meta property="og:title" content="Ziliring | Creating Financial Solution for all">
+  <meta property="og:title" content="Ziliring | We Earn Your Future, Let Us Earn Your Trust">
   <meta property="og:description" content="Ziliring offers the financial solution we all have been waiting for. Subscribe to our plans today to join the greatest financial breakthrough">
   <meta property="og:image" content="https://ziliring.com/favicon/android-chrome-192x192.png">
   <meta property="og:url" content="https://ziliring.com">
